# TicTacToe.AI

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: Bug_report.md
.github/workflows/: Linux-pack.yml  MacOS-pack.yml  Windows-pack.yml  build_cmake.yml  installqt.yml
cmake/: BrandSettings.cmake  Config.cmake  ImportStaticLibraries.cmake  Install.cmake  Package.cmake  ProjectDeployment.cmake  Qt5LibraryManager.cmake  Qt5LinguistToolsMacros.cmake  Qt5Localization.cmake  Qt5ScxmlMacros.cmake  Utilities.cmake
cmake/modules/: MacOSXBundleInfo.plist.in
packaging/macos/: Info.plist  update_package.sh
packaging/platform/Linux/: gnome_dekstop_entry.in
packaging/platform/Windows/: resource_template.rc.in
packaging/platform/macOS/: Info.plist.in
res/desktopEntry/package/: org.alemdarCorp.TicTacToe.AI.desktop
res/img/app/: tictactoe.icns
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/app/ui/: main copy.qml  main.qml
src/core/: CMakeLists.txt
src/core/src/: core_plugin.cpp  core_plugin.h
src/core/src/ai/: ai_player.cpp  ai_player.h
src/core/src/config/: app_config.cpp  app_config.h
src/core/src/data/: game_difficulty.cpp  game_difficulty.h  tile_shape.cpp  tile_shape.h
src/core/src/game/: board.cpp  board.h  board_model.cpp  board_model.h  game_object.cpp  game_object.h  player.cpp  player.h  tile.cpp  tile.h
src/core/src/model/: tile_shape_model.cpp  tile_shape_model.h
src/core/src/settings/: game_settings.cpp  game_settings.h
src/core/src/statechart/: Main.scxml
src/core/src/theme/: colors.cpp  colors.h  fonts.cpp  fonts.h  sizes.cpp  sizes.h  theme.cpp  theme.h
src/glue/: CMakeLists.txt
src/glue/src/: entrance.cpp  entrance.h  entrance_p.h  glue_plugin.cpp  glue_plugin.h
src/interfaces/: CMakeLists.txt
src/interfaces/src/: interfaces_plugin.cpp  interfaces_plugin.h
src/interfaces/src/controllers/: application_controller.cpp  application_controller.h  game_controller.cpp  game_controller.h
src/l10n/: CMakeLists.txt
src/l10n/src/: l10n_plugin.cpp  l10n_plugin.h
src/l10n/trfiles/: EcoSDK_New_French.json  EcoSDK_New_German.json  English.json  Turkish.json
src/l10n/tsfiles/: de.ts  en_US.ts  fr.ts  tr.ts
src/template/: config.h.in
src/uiComponents/: CMakeLists.txt
src/uiComponents/imports/Theme/: Theme.qrc
src/uiComponents/imports/UIComponents/: UIComponents.qrc
src/uiComponents/imports/UIComponents/Backgrounds/: AnimatedTile.qml  KYCLogo.qml  LoginBackground.qml  Logo.qml  RadialGradientBackground.qml  qmldir
src/uiComponents/imports/UIComponents/Buttons/: DashedButton.qml  DefaultButton.qml  IconButton.qml  LinkButton.qml  StartScreenButton.qml  qmldir
src/uiComponents/imports/UIComponents/Sheets/: BottomSheet.qml  qmldir
src/uiComponents/imports/UIComponents/Text/: LoginTextArea.qml  qmldir
src/uiComponents/imports/UIComponents/Views/: MainStackView.qml  qmldir
src/uiComponents/source/: ui_components_plugin.cpp  ui_components_plugin.h
src/uiScreens/: CMakeLists.txt
src/uiScreens/imports/UIScreens/: UIScreens.qrc
src/uiScreens/imports/UIScreens/GamePlayScreen/: GamePlayBoard.qml  GamePlayPage.qml  GamePlayScreen.qml  GamePlayScreenPage.qml  PlayerInfo.qml  PlayerScore.qml  qmldir
src/uiScreens/imports/UIScreens/OptionsScreen/: DifficultyChooser.qml  GridSizeChooser.qml  OptionsBoard.qml  OptionsScreenPage.qml  OptionsTitle.qml  PlayerSettings.qml  ShapeChooser.qml  qmldir
src/uiScreens/imports/UIScreens/ScoreScreen/: ScoreScreenPage.qml  qmldir
src/uiScreens/imports/UIScreens/StartScreen/: CameraTutorialPage.qml  StartScreenPage.qml  qmldir
src/uiScreens/source/: ui_screens_plugin.cpp  ui_screens_plugin.h
