# -------------------------------------------------------------------------------------------------
# Add sub-modules 
# -------------------------------------------------------------------------------------------------
add_subdirectory(l10n)
add_subdirectory(core)
add_subdirectory(uiComponents)
add_subdirectory(uiScreens)
add_subdirectory(interfaces)
add_subdirectory(glue)
add_subdirectory(app)


